[package]
name = "marching-squares"
version = "0.1.1"
authors = ["Daniele D'Orazio <d.dorazio96@gmail.com>", "Felix Schütt <felix.schuett@maps4print.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/fschutt/marching-squares"
homepage = "https://github.com/fschutt/marching-squares"
readme = "README.md"
description = "Parallelized marching squares algorithm for constructing closed isolines / contour lines"
keywords = ["marching-squares", "contour", "heightmap", "contours", "isoline" ]
categories = ["algorithms", "geo"]

[dependencies]
rayon = { version = "1.3.0", optional = true }

[features]
parallel = ["rayon"]